# university-projects

lab-2/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab-2/lab_2/: __main__.py
lab-2/lab_2/asymmetric/: __init__.py  __main__.py  input.txt  solution.py
lab-2/lab_2/symmetric/: __main__.py  input.txt  solution.py
